# cookiecutter-fastapi-react-psql

./: README.md  cookiecutter.json
.github/: dependabot.yml
{{cookiecutter.project_name}}/: .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml
{{cookiecutter.project_name}}/.github/: dependabot.yml
{{cookiecutter.project_name}}/.github/workflows/: test.yaml
{{cookiecutter.project_name}}/backend/: .dockerignore  .env  .env.test  .flake8  Dockerfile  pyproject.toml
{{cookiecutter.project_name}}/backend/app/: __init__.py  db.py  main.py
{{cookiecutter.project_name}}/backend/app/api/: __init__.py  utils.py
{{cookiecutter.project_name}}/backend/app/core/: config.py
{{cookiecutter.project_name}}/backend/app/models/: __init__.py  user.py
{{cookiecutter.project_name}}/backend/migrations/: env.py
{{cookiecutter.project_name}}/backend/tests/api/: conftest.py  test_utils.py
{{cookiecutter.project_name}}/frontend/: .dockerignore  .eslintrc.js  Dockerfile  package.json
{{cookiecutter.project_name}}/frontend/etc/: nginx.conf
{{cookiecutter.project_name}}/nginx/: nginx.conf
